movenc: add more metadata types

Fixes Ticket1052

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>